--- a/PodoDemo/Views/Shared/Layout.cshtml
+++ b/PodoDemo/Views/Shared/Layout.cshtml
@@ -14,11 +14,12 @@
     @*JQWidget*@
     <script src="~/js/jqwidgets/jqx-all.js"></script>
     <link href="~/js/jqwidgets/styles/jqx.base.css" rel="stylesheet" />
+    <link href="~/js/jqwidgets/styles/jqx.metroCustom.css" rel="stylesheet" />
 
     @*부트 스트랩*@    
     <script src="~/bootstrap332/dist/js/bootstrap.js"></script>
     <link href="~/bootstrap332/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
+    <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />    
 
     @*커스텀 파일*@
     <link href="~/css/Layout.css" rel="stylesheet" />
