--- a/PodoDemo/Views/Accounts/Create.cshtml
+++ b/PodoDemo/Views/Accounts/Create.cshtml
@@ -2,7 +2,7 @@
 @model string
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "거래처";
     List<string> propertyList = ViewBag.AccountPropertyList;
     List<string> propertyTypeList = ViewBag.AccountPropertyTypeList;
 }
