--- a/PodoDemo/Views/Accounts/Edit.cshtml
+++ b/PodoDemo/Views/Accounts/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PodoDemo.Models.Account
 
 @{
-    ViewData["Title"] = "거래처수정";
+    ViewData["Title"] = "거래처";
 }
 
 <script type="text/javascript">
