--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 @{
-    ViewData["Title"] = "Account";
+    ViewData["Title"] = "거래처";
 }
 <script type="text/javascript">
     $(document).ready(function () {
