--- a/PodoDemo/Views/Contacts/Create.cshtml
+++ b/PodoDemo/Views/Contacts/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PodoDemo.Models.Contact
 
 @{
-    ViewData["Title"] = "연락처생성";
+    ViewData["Title"] = "연락처";
 }
 <script type="text/javascript">
     $(document).ready(function () {
