--- a/PodoDemo/Views/Contacts/Index.cshtml
+++ b/PodoDemo/Views/Contacts/Index.cshtml
@@ -37,7 +37,7 @@
                 [
                     { name: 'Contactid', type: 'number' },
                     { name: 'Name', type: 'string' },
-                    { name: 'Deparement', type: 'string' },
+                    { name: 'Department', type: 'string' },
                     { name: 'Title', type: 'string' },
                     { name: 'CompanyName', type: 'string' },
                     { name: 'Email', type: 'string' },
@@ -68,23 +68,20 @@
                 //showfilterrow: true,
                 filterable: true,
                 pagesize: 15,
-                //theme: "MetroCustom",//테마설정
+                theme: "metroCustom",//테마설정
                 //columnsheight: '40px',//헤더 높이 설정
-                //localization: getLocalization('ko-KR'),
+                localization: GetLocalizationString(),
                 //virtualmode: true,      // 목록이 매우 많을 경우 일부분만 렌더링해서 보여주고 다른 페이지를 불러올 떄마다 렌더링한다.
                 //rendergridrows: rendergridrows,
                 columns: [
-                    { text: "ContactID", datafield: "Contactid", hidden: true, align: 'center', cellsalign: 'center' },
-                    { text: "이름", datafield: "Name", align: 'center', cellsalign: 'left' },
-                    { text: '부서', datafield: 'Deparement', align: 'center', cellsalign: 'left', width: 80 },
-                    { text: "직급", datafield: "Title", align: 'center', cellsalign: 'left', width: 80 },
-                    { text: '회사명', datafield: 'CompanyName', align: 'center', cellsalign: 'left' },
-                    { text: 'E-Mail', datafield: 'Email', align: 'center', cellsalign: 'left', width: '160px' },
-                    { text: '전화번호', datafield: 'Phone', align: 'center', cellsalign: 'center', width: '130px' },
-                    { text: '휴대전화', datafield: 'Mobile', align: 'center', cellsalign: 'center', width: '130px' }//,
-                    //{ text: '설명', datafield: 'Detail', align: 'center', cellsalign: 'center', width: 50 },
-                    //{ text: '상사', datafield: 'BossName', align: 'center', cellsalign: 'center', width: 40 },
-                    //{ text: '주소', datafield: 'Address', align: 'center', cellsalign: 'center', width: 40 }
+                    { text: "ContactID", datafield: "Contactid", hidden: true },
+                    { text: "이름", datafield: "Name", align: 'center', cellsalign: 'left', width: '20%', minwidth: '100px' },
+                    { text: '부서', datafield: 'Department', align: 'center', cellsalign: 'center', width: '10%', minwidth: '80px' },
+                    { text: "직급", datafield: "Title", align: 'center', cellsalign: 'center', width: '10%', minwidth: '80px' },
+                    { text: '회사명', datafield: 'CompanyName', align: 'center', cellsalign: 'left', width: '15%', minwidth: '100px'},
+                    { text: 'E-Mail', datafield: 'Email', align: 'center', cellsalign: 'left', width: '15%', minwidth: '100px' },
+                    { text: '전화번호', datafield: 'Phone', align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px' },
+                    { text: '휴대전화', datafield: 'Mobile', align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px'}
                 ]
             });
     }
