--- a/PodoDemo/Views/Shared/Popup_Layout.cshtml
+++ b/PodoDemo/Views/Shared/Popup_Layout.cshtml
@@ -14,15 +14,17 @@
     @*JQWidget*@
     <script src="~/js/jqwidgets/jqx-all.js"></script>
     <link href="~/js/jqwidgets/styles/jqx.base.css" rel="stylesheet" />
+    <link href="~/js/jqwidgets/styles/jqx.metroCustom.css" rel="stylesheet" />
 
     @*부트 스트랩*@
-    <script src="~/js/bootstrap332/js/bootstrap.js"></script>
-    <link href="~/js/bootstrap332/css/bootstrap.css" rel="stylesheet" />
+    <script src="~/bootstrap332/dist/js/bootstrap.js"></script>
+    <link href="~/bootstrap332/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
 
     @*커스텀 파일*@
     <link href="~/css/Layout.css" rel="stylesheet" />
     <script src="~/js/Common.js"></script>
-    <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
+    <script src="~/js/jqwidget-custom.js"></script>
 
 </head>
 <body>
